--- a/index.html
+++ b/index.html
@@ -1,49 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="estiloCalculadora.css" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="contenedor">
-      <div class="visualizacion">
-        <div class="operacion">5+5</div>
-        <div class="resultado">aqui el resultado</div>
-      </div>
-      <div class="teclado">
-        <div class="superior">
-            <button>c</button>
-            <button>←</button>
-            <button>%</button>
-        </div>
-        <div class="base">
-            <div class="numeros">
-                <button>9</button>
-                <button>8</button>
-                <button>7</button>
-                <button>6</button>
-                <button>5</button>
-                <button>4</button>
-                <button>3</button>
-                <button>2</button>
-                <button>1</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora</title>
+    <link href="estiloCalculadora.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="container">
+        <div class="calculadora">
+            <div class="display">
+                <div id="valor-anterior"></div>
+                <div id="valor-actual"></div>
             </div>
-            <div class="simbolos">
-                <button>x</button>
-                <button>-</button>
-                <button>+</button>
-            </div>
-        </div>
-        <div class="superior">
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
+            <button id="reseteo" class="col-2" onclick="display.borrarTodo()">C</button>
+            <button class="borrado" onclick="display.borrar()">&larr;</button>
+            <button class="operador" value="dividir">%</button>
+            <button class="numero">7</button>
+            <button class="numero">8</button>
+            <button class="numero">9</button>
+            <button class="operador" value="multiplicar">X</button>
+            <button class="numero">4</button>
+            <button class="numero">5</button>
+            <button class="numero">6</button>
+            <button class="operador" value="restar">-</button>
+            <button class="numero">1</button>
+            <button class="numero">2</button>
+            <button class="numero">3</button>
+            <button class="operador" value="sumar">+</button>
+            <button class="col-2 numero">0</button>
+            <button class="numero" id="punto">.</button>
+            <button class="operador" value="igual">=</button>
         </div>
     </div>
-
-    <script></script>
-  </body>
+</body>
 </html>
