--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div id="valor-anterior"></div>
                 <div id="valor-actual"></div>
             </div>
-            <button id="reseteo" class="col-2" onclick="display.borrarTodo()">C</button>
+            <button id="reseteo" class="col-2" type="reset">C</button>
             <button class="borrado" onclick="display.borrar()">&larr;</button>
             <button class="operador" value="dividir">%</button>
             <button class="numero">7</button>
@@ -33,5 +33,8 @@
             <button class="operador" value="igual">=</button>
         </div>
     </div>
+    <script>
+
+    </script>
 </body>
 </html>
